--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
   <div align="center">
-    <h1>Waaw, Congratulations Prabhakar you did it ...</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
+    <h1>Test page thanks ...</h1>
+    <h2>AWS CodeDeploy.</h2>
+    <p></p>
   </div>
 </body>
 </html>
