--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Test page thanks ...</h1>
+    <h1>Test page thankss ...</h1>
     <h2>AWS CodeDeploy.</h2>
     <p></p>
   </div>
